
Mon Oct 8 16:14:40 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* interp.c: use the accessors provided in object.h to deal with
	MonoArrays. Updates for API renames in metadata. Throw exception
	in ldelema if index is out of bounds.

Mon Oct 8 10:44:25 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* interp.c: fixes for changes in metadata.

2001-10-04  Dick Porter  <dick@ximian.com>

	* interp.c (ves_runtime_method): init_class() the
	mono_defaults.delegate_class
	Include mono-endian.h not endian.h

Tue Oct 2 18:51:25 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* interp.c: set frame->ip in the leave opcode. Make db_methods static.

Sun Sep 30 11:57:15 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* interp.c: compiler and ANSI C portability fixes.

Fri Sep 28 19:37:46 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* interp.c: Implemented ldtoken, conv.ovf.i. Use MonoClass->byval_arg
	(and remove related kludges). Don't choke on access to arrays of
	references. Throw an exception when an internalcall or P/Invoke
	function don't have an implementation. Throw and EngineException
	for unimplemented opcodes.

Tue Sep 25 11:12:35 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* interp.c: fixed get_virtual_method () to deal with interface
	methods better.

Mon Sep 24 18:50:25 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* interp.c: catch a few more error conditions with exceptions instead of
	erroring out.
	Don't use g_print() in stack traces because it doesn't work with
	some float values.
	When we call an instance method of a valuetype class, unbox the 'this'
	argument if it is an object.
	Use mono_ldstr () to implement the ldstr opcode: it takes care of
	interning the string if necessary.
	Implemented new opcodes: ckfinite, cgt.un, clt.un, ldvirtftn, ldarga.
	Fixes to handle NaNs when comparing doubles.
	Make sure the loaded assembly has an entry point defined.
	Fixed portability bugs in neg and not opcodes.

2001-09-24  Dietmar Maurer  <dietmar@ximian.com>
